@@ -13,6 +13,8 @@ BUGFIXES
  * Issue 188: (Linux) psutil import error on Linux ARM architectures.
  * Issue 197: (Linux) Process.get_connections() is broken on platforms not
    supporting IPv6.
+ * Issue 200: (Linux) psutil.NUM_CPUS not working on armel and sparc
+   architectures and causing crash on module import.
 
 
 0.3.0 - 2011-07-08
